feat(payment): create test grpc endpoint
